:recycle: [maykinmedia/sharing-configs#8] return binary file for download endpoint
